more effective use of Boolean